unpackaged/main/default/objects/Territory__c/Territory__c.object-meta.xml
<CustomObject>
    <description>Table référentielle pour l&#39;assignation des commerciaux aux S.A.D</description>
    <label>Territoire</label>
    <nameField>
        <displayFormat>TER-{000000000}</displayFormat>
        <label>Numéro de Territoire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territoires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>