unpackaged/main/default/objects/Territory__c/fields/Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal__c</fullName>
    <externalId>true</externalId>
    <label>Code Postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>