unpackaged/main/default/objects/Territory__c/fields/Nom_du_Territoire__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_Territoire__c</fullName>
    <formula>LEFT( Organisation_Commerciale__r.Name +&quot; &quot;+&quot;-&quot;+&quot; &quot;+  Code_Postal__c +&quot; &quot;+&quot;-&quot;+&quot; &quot;+ Secteur__r.Name ,80)</formula>
    <label>Nom</label>
    <type>Text</type>
</CustomField>