unpackaged/main/default/objects/Territory__c/fields/Region_PF__c.field-meta.xml
<CustomField>
    <fullName>Region_PF__c</fullName>
    <label>Région PF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaysRegionPF</valueSetName>
    </valueSet>
</CustomField>