unpackaged/main/default/objects/Territory__c/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secteur</label>
    <referenceTo>Secteur__c</referenceTo>
    <relationshipLabel>Territoire</relationshipLabel>
    <relationshipName>Territoires</relationshipName>
    <type>Lookup</type>
</CustomField>