unpackaged/main/default/objects/Territory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organisation_Commerciale__c</columns>
    <columns>Secteur__c</columns>
    <columns>Code_Postal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_Postal__c</field>
        <operation>equals</operation>
        <value>20089</value>
    </filters>
    <label>Tout</label>
</ListView>