unpackaged/main/default/objects/Territory__c/listViews/Reways.listView-meta.xml
<ListView>
    <fullName>Reways</fullName>
    <columns>NAME</columns>
    <columns>Organisation_Commerciale__c</columns>
    <columns>Region_PF__c</columns>
    <columns>Secteur__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region_PF__c</field>
        <operation>equals</operation>
        <value>Reways</value>
    </filters>
    <label>Reways</label>
</ListView>